--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "symfony/http-foundation": "^5.0",
         "symfony/routing": "^5.0",
-        "symfony/http-kernel": "^5.0"
+        "symfony/http-kernel": "^5.0",
+        "symfony/event-dispatcher": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
