--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "symfony/http-foundation": "^5.0",
         "symfony/routing": "^5.0",
         "symfony/http-kernel": "^5.0",
-        "symfony/event-dispatcher": "^5.0"
+        "symfony/event-dispatcher": "^5.0",
+        "pimple/pimple": "^3.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
