--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^7.2",
-        "makineza/framework": "*"
+        "makineza/framework": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
@@ -29,5 +29,6 @@
     "config": {
         "sort-packages": true
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
