--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^7.2",
-        "makineza/framework": "dev-master"
+        "makineza/framework": "@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
