--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": "^7.2",
-        "makineza/framework": "@dev"
+        "makineza/framework": "@dev",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
