--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": "^7.2",
-        "makineza/framework": "@dev",
-        "ext-json": "*"
+        "ext-json": "*",
+        "makineza/framework": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
